AddingCart iccon & Customize the menu for project

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,15 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <!-- Customize your color here. -->
+    <color name="colorPrimary">#f37736</color>
+    <color name="colorPrimaryDark">#ee4035</color>
+    <color name="colorAccent">#fdf498</color>
+    <color name="colorPrimaryLight">#7bc043</color>
+    <color name="colorBlue">#0392cf</color>
+    <color name="colorBackground">#EBEBEB</color>
+    <color name="colorTrendingStart">#00B09B</color>
+    <color name="colorTrendingEnd">#96C93D</color>
+    <color name="colorDivider">#D6D6D6</color>
+    <color name="colorWhite">#FFFFFF</color>
 </resources>
