--- a/app/src/main/res/layout/cart_activity.xml
+++ b/app/src/main/res/layout/cart_activity.xml
@@ -5,5 +5,135 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".CartActivity">
+    <ImageView
+        android:id="@+id/iconCart"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:background="@drawable/ic_shopping_cart"
+        android:backgroundTint="@color/cartBlue"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginTop="20dp"
+        />
+<!--    This start Constrain must be reminded again-->
+    <TextView
+        android:id="@+id/txtCartID"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@color/black"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="@id/iconCart"
+        app:layout_constraintTop_toBottomOf="@id/iconCart"
+        app:layout_constraintLeft_toLeftOf="@id/iconCart"
+        app:layout_constraintRight_toRightOf="@id/iconCart"
+        android:text="My Cart"
+        android:textSize="30dp"
+        />
+    <LinearLayout
+        android:id="@+id/rowbox"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintHorizontal_weight="3"
+        app:layout_constraintTop_toBottomOf="@id/txtCartID"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:paddingBottom="10dp"
+        android:layout_marginTop="10dp"
+        >
+        <View
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_weight="9"/>
+        <TextView
+            android:layout_weight="0.3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Quantity"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            />
+
+        <TextView android:layout_weight="0.5"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Sum Price"
+            android:textSize="16sp"
+            android:textStyle="bold"/>
+    </LinearLayout>
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/cartList"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@+id/rowbox"
+        app:layout_constraintEnd_toEndOf="@id/checkoutBox"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/checkoutBox"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        tools:listitem="@layout/cart_item"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        />
+
+    <LinearLayout
+        android:id="@+id/checkoutBox"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:orientation="horizontal"
+        app:layout_constraintHorizontal_weight="3"
+        android:gravity="center"
+
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:paddingBottom="10dp"
+        android:layout_marginTop="10dp"
+        android:background="@drawable/shape_checkout_box"
+        >
+        <TextView
+            android:layout_weight="0.7"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:text="Total"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            />
+
+
+        <TextView
+
+            android:id="@+id/txtTotalPrice"
+            android:layout_weight="0.5"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="đ 490.000"
+            android:textColor="#A5670D"
+            android:textSize="16sp"
+            android:textStyle="bold"/>
+        <LinearLayout
+            android:layout_width="50dp"
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical"
+            android:layout_weight="0.3"
+            android:orientation="vertical"
+            >
+            <ImageButton
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:background="@drawable/ic_credit_card"
+                android:layout_gravity="center"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Checkout"
+                android:textColor="@color/cartBlue"
+                android:textSize="16sp"
+                android:layout_gravity="center"/>
+
+
+        </LinearLayout>
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
