--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,6 +13,7 @@
     <color name="colorAccent">#fdf498</color>
     <color name="colorPrimaryLight">#7bc043</color>
     <color name="colorBlue">#0392cf</color>
+    <color name="cartBlue">#4880D3</color>
     <color name="colorBackground">#EBEBEB</color>
     <color name="colorTrendingStart">#00B09B</color>
     <color name="colorTrendingEnd">#96C93D</color>
