2> Cập nhập Delete Onclick mọi nơi 3> Cập nhập Search Button 4> Cập nhập Animation + căn lại Recycle View ==== Bug cần cải thiện: - RecycleView position ngu ( Notifycation ngu -> Thay thư viên) - Async task không đồng bộ image mỗi lần gọi-> Tìm giải pháp lưu image hợp lý hơn - Delete Item nhanh dính bug-> Lỗi gọi db nhiều nơi + executer chậm -> Bug

--- a/app/src/main/res/layout/cart_item.xml
+++ b/app/src/main/res/layout/cart_item.xml
@@ -17,7 +17,7 @@
         tools:srcCompat="@drawable/image" />
 
 
-<!--    Txt Column-->
+    <!--    Txt Column-->
     <LinearLayout
         android:layout_width="200dp"
         android:layout_height="100dp"
@@ -26,20 +26,20 @@
         android:orientation="vertical"
         >
 
-    <TextView
-        android:layout_marginTop="10dp"
-        android:layout_marginLeft="5dp"
-        android:layout_marginRight="5dp"
-        android:id="@+id/txtOrderTitle"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Đèn ngủ 3D led để bàn trang trí nhiều mẫu"
-        android:ellipsize="end"
-        android:layout_weight="2"
-        android:maxLines="2"
-        android:textColor="@color/black"
-        android:textSize="14sp"
-        android:textStyle="bold" />
+        <TextView
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
+            android:id="@+id/txtOrderTitle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Đèn ngủ 3D led để bàn trang trí nhiều mẫu"
+            android:ellipsize="end"
+            android:layout_weight="2"
+            android:maxLines="2"
+            android:textColor="@color/black"
+            android:textSize="14sp"
+            android:textStyle="bold" />
         <TextView
             android:id="@+id/txtOrderPrice"
             android:layout_width="wrap_content"
@@ -101,8 +101,9 @@
 
     <TextView
         android:id="@+id/txtOrderSumPrice"
-        android:layout_width="wrap_content"
+        android:layout_width="100dp"
         android:layout_height="wrap_content"
+        android:textAlignment="textEnd"
         android:text="đ 49.000"
         android:textColor="#A5670D"
         android:layout_gravity="center_vertical"
