--- a/app/src/main/res/layout/product_row.xml
+++ b/app/src/main/res/layout/product_row.xml
@@ -7,6 +7,7 @@
     android:layout_height="wrap_content"
     android:background="@drawable/shape_product_card"
     android:layout_marginBottom="10dp"
+    android:layout_marginLeft="10dp"
     >
 
     <ImageView
